CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.7.2-dev

contrib
======================

distributed
----------------------
* Added more robust Progress support for AntBuilder on BuildAgents.
* Remove extraneous synchronized flags.
* Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.

build loop
======================

AntBootstrapper/Publisher
----------------------
* Fix uselogger/AntOutputLogger bug. Provides independent showAntOutput attribute on AntBuilder (CC-699). Reported by Jerome Hourquebie.

AntBuilder
----------------------
* Fix validateBuildFileExists() to handle non-absolute, but valid build file with antWorkingDir set to a different work dir on Windows.

Cincom Smalltalk VisualWorks Store Source Control
----------------------
* A sourcecontrol implementation for Cincom Smalltalk VisualWorks Store scm (CC-709). Contributed by Randy Coulman.

CMSynergy
----------------------
* Improved modification query for Telelogic Synergy using "useBindTime" (CC-691). Contributed by Jan Koops.

CompositeBuilder
----------------------
* Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
* Insert composite builder info into build log for each child builder.
Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.

Configuration documentation generation
----------------------
* Created addiitonal plugin superclasses to make generating configxml.html. Still a work in progress (CC-202). Patch by Jerome Lacoste.

ExecBuilder/RakeBuilder
----------------------
* Implement Progress support for Exec and Rake Builders.

Git Source Control & Bootstrapper
----------------------