@@ -12,6 +12,7 @@ distributed
 * Added more robust Progress support for AntBuilder on BuildAgents.
 * Remove extraneous synchronized flags.
 * Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.
+* Change CCDist build to execute in the distributed/target directory (same as cc-main).
 
 build loop
 ======================
